--- a/src/content/index.html
+++ b/src/content/index.html
@@ -30,7 +30,7 @@
 <body>
   <main class="main">
     <div class="counter">       
-      <span class="counter__value">8</span>  
+      <span class="counter__value counter__value--js">8</span>  
     </div>
 
       <button class="button-add button-add--js">dodaj szklankę</button>
